2.02/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-app
  template:
    metadata:
      labels:
        app: project-app
    spec:
      containers:
        - name: todo-backend
          image: lauraleonilla/todobackend:latest
