2.02/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-srv
spec:
  type: ClusterIP
  selector:
    app: project-app
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
